# earth-sim

./: CMakeLists.txt  README.md  documentatie-atestat.docx  main.c
resources/shaders/: earth_fragment.glsl  earth_vertex.glsl  sun_fragment.glsl  sun_vertex.glsl  vertices_compute.glsl
